--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,19 @@ out/
 *.iml
 *.ipr
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/
+
 # Compressed folders
 *.zip
 *.rar
