--- a/lab3/HelloService/pom.xml
+++ b/lab3/HelloService/pom.xml
@@ -29,6 +29,16 @@
             <artifactId>grpc-stub</artifactId>
             <version>1.53.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.21.7</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 </project>
